@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "User" as user {
  *id : number <<generated>>
  --
  firstname : text
  lastname : text
  email : text [unique]
  birthdate : date
  password : text
  password_reset_token : text
  provider : text
  provider_id : text
  gender : enum
  is_admin : boolean
}

entity "Message" as message {
  *id : number <<generated>>
  --
  message : text
  disabled: boolean
  --
  *event_id : number <<FK>>
  *user_id : number <<FK>>
}

entity "Photo" as photo {
  *id : number <<generated>>
  --
  file_name : text
  --
  *event_id : number <<FK>>
}

entity "Event" as event {
  *id : number <<generated>>
  --
  *user_id : number <<FK>>
  description  : text
  adress : text
  zip_code : text
  city : text
  latitude : float
  longitude : float
  available_slot : number
  date : date
  status : enum
  gender : enum
  --
}


entity "ZipCode" as zipcode {
  *id : number <<generated>>
  --
  zip_code : text
  name : text
  latitude : float
  longitude : float
}

entity "EventRegister" as eventRegister {
  *event_id : number <<FK>>
  *user_id : number <<FK>>
  --
  status : enum
}

entity "PhotoLike" as photoLike {
  *photo_id : number <<FK, Primary>>
  *user_id : number <<FK, Primary>>
}


user ||--o{ message
user ||--o{ event
user }o-- eventRegister
eventRegister --o{ event
message |o--|| event
photo |o--|| event
photo }o-- photoLike
photoLike --o{ user
@enduml